package rpc

import (
	"context"
	"encoding/json"
	"fmt"

	// "greatestworks/application/services" // TODO: 实现services
	"greatestworks/internal/infrastructure/logger"
	// "greatestworks/internal/proto/pet" // TODO: 实现pet proto
)

// PetRPCService 宠物RPC服务
type PetRPCService struct {
	// petService *services.PetService // TODO: 实现PetService
	logger logger.Logger
}

// NewPetRPCService 创建宠物RPC服务
func NewPetRPCService(logger logger.Logger) *PetRPCService {
	return &PetRPCService{
		// petService: petService, // TODO: 实现PetService
		logger: logger,
	}
}

// GetName 获取服务名称
func (s *PetRPCService) GetName() string {
	return "PetService"
}

// HandleRequest 处理请求
func (s *PetRPCService) HandleRequest(ctx context.Context, method string, data []byte) ([]byte, error) {
	switch method {
	case "CreatePet":
		return s.handleCreatePet(ctx, data)
	case "GetPetInfo":
		return s.handleGetPetInfo(ctx, data)
	case "UpdatePet":
		return s.handleUpdatePet(ctx, data)
	case "LevelUpPet":
		return s.handleLevelUpPet(ctx, data)
	case "EvolvePet":
		return s.handleEvolvePet(ctx, data)
	case "GetPlayerPets":
		return s.handleGetPlayerPets(ctx, data)
	default:
		return nil, fmt.Errorf("未知方法: %s", method)
	}
}

// handleCreatePet 处理创建宠物请求
func (s *PetRPCService) handleCreatePet(ctx context.Context, data []byte) ([]byte, error) {
	// TODO: 实现创建宠物逻辑
	// var req services.CreatePetCommand
	// if err := json.Unmarshal(data, &req); err != nil {
	// 	return nil, err
	// }

	// result, err := s.petService.CreatePet(ctx, &req)
	// if err != nil {
	// 	return nil, err
	// }

	// return json.Marshal(result)

	// 临时返回空结果
	return json.Marshal(map[string]interface{}{"message": "Pet service not implemented"})
}

// handleGetPetInfo 处理获取宠物信息请求
func (s *PetRPCService) handleGetPetInfo(ctx context.Context, data []byte) ([]byte, error) {
	var req struct {
		PetID string `json:"pet_id"`
	}
	if err := json.Unmarshal(data, &req); err != nil {
		return nil, err
	}

	// 这里需要根据实际的PetService方法进行调用
	// result, err := s.petService.GetPetInfo(ctx, req.PetID)
	// if err != nil {
	//     return nil, err
	// }

	return json.Marshal(map[string]string{"status": "success"})
}

// handleUpdatePet 处理更新宠物请求
func (s *PetRPCService) handleUpdatePet(ctx context.Context, data []byte) ([]byte, error) {
	var req struct {
		PetID   string                 `json:"pet_id"`
		Updates map[string]interface{} `json:"updates"`
	}
	if err := json.Unmarshal(data, &req); err != nil {
		return nil, err
	}

	// 这里需要根据实际的PetService方法进行调用
	// err := s.petService.UpdatePet(ctx, req.PetID, req.Updates)
	// if err != nil {
	//     return nil, err
	// }

	return json.Marshal(map[string]string{"status": "success"})
}

// handleLevelUpPet 处理宠物升级请求
func (s *PetRPCService) handleLevelUpPet(ctx context.Context, data []byte) ([]byte, error) {
	var req struct {
		PetID            string `json:"pet_id"`
		ExperiencePoints int    `json:"experience_points"`
	}
	if err := json.Unmarshal(data, &req); err != nil {
		return nil, err
	}

	// 这里需要根据实际的PetService方法进行调用
	// result, err := s.petService.LevelUpPet(ctx, req.PetID, req.ExperiencePoints)
	// if err != nil {
	//     return nil, err
	// }

	return json.Marshal(map[string]string{"status": "success"})
}

// handleEvolvePet 处理宠物进化请求
func (s *PetRPCService) handleEvolvePet(ctx context.Context, data []byte) ([]byte, error) {
	var req struct {
		PetID           string   `json:"pet_id"`
		TargetSpeciesID string   `json:"target_species_id"`
		RequiredItems   []string `json:"required_items"`
	}
	if err := json.Unmarshal(data, &req); err != nil {
		return nil, err
	}

	// 这里需要根据实际的PetService方法进行调用
	// result, err := s.petService.EvolvePet(ctx, req.PetID, req.TargetSpeciesID, req.RequiredItems)
	// if err != nil {
	//     return nil, err
	// }

	return json.Marshal(map[string]string{"status": "success"})
}

// handleGetPlayerPets 处理获取玩家宠物列表请求
func (s *PetRPCService) handleGetPlayerPets(ctx context.Context, data []byte) ([]byte, error) {
	var req struct {
		PlayerID string `json:"player_id"`
		Limit    int    `json:"limit"`
		Offset   int    `json:"offset"`
	}
	if err := json.Unmarshal(data, &req); err != nil {
		return nil, err
	}

	// 这里需要根据实际的PetService方法进行调用
	// result, err := s.petService.GetPlayerPets(ctx, req.PlayerID, req.Limit, req.Offset)
	// if err != nil {
	//     return nil, err
	// }

	return json.Marshal(map[string]string{"status": "success"})
}
